# mopta-26

./: README.md
AIMMS_MOPTA_2026/: AIMMS-MOPTA Interfor data.xlsx  AIMMS_MOPTA_2026.aimms  README.docx  pyproject.toml  read_input_data.py  singleton.py
AIMMS_MOPTA_2026/MainProject/: AIMMS-MOPTA 2026.ams  Project.xml
AIMMS_MOPTA_2026/MainProject/WebUI/: webui.json
